--- a/index.html
+++ b/index.html
@@ -51,8 +51,9 @@
             href="https://github.com/KylaLeigh"
             target="_blank"
             rel="noopener noreferrer"
-            >Kyla Leigh</a
           >
+            Kyla Leigh
+          </a>
           and is <a href="#" target="_blank"> on GitHub</a> and
           <a href="#" target="_blank">hosted on Netlify</a>
         </p>
