--- a/index.html
+++ b/index.html
@@ -54,7 +54,15 @@
           >
             Kyla Leigh
           </a>
-          and is <a href="#" target="_blank"> on GitHub</a> and
+          and is
+          <a
+            href="https://github.com/KylaLeigh/shecodes-weather-app"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            on GitHub</a
+          >
+          and
           <a href="#" target="_blank">hosted on Netlify</a>
         </p>
       </footer>
