--- a/index.html
+++ b/index.html
@@ -63,7 +63,13 @@
             on GitHub</a
           >
           and
-          <a href="#" target="_blank">hosted on Netlify</a>
+          <a
+            href="https://mellifluous-platypus-841d28.netlify.app"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            hosted on Netlify</a
+          >
         </p>
       </footer>
     </div>
